manifests/newswaters/job.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-summarize-and-analyze
  labels:
    app: job-summarize-and-analyze
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: job-summarize-and-analyze
  template:
    metadata:
      labels:
        app: job-summarize-and-analyze
    spec:
      containers:
        # See: https://github.com/metalwhale/newswaters
        - name: job-summarize-and-analyze
          image: metalwhaledev/newswaters-job:0.3.0
          imagePullPolicy: Always
          command:
            - /bin/sh
            - -c
            - >
              newswaters-job summarize-texts &&
              newswaters-job analyze-summaries &&
              newswaters-job analyze-comment-texts
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          securityContext:
            runAsUser: 1000
