manifests/newswaters/skimmer-item-urls.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skimmer-item-urls-patch
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skimmer-item-urls
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: skimmer-item-urls
    spec:
      containers:
        # See: https://github.com/metalwhale/newswaters
        - name: skimmer-item-urls
          image: metalwhaledev/newswaters-skimmer:0.1.1
          imagePullPolicy: Always
          command:
            - skimmer
            - item_urls
          resources:
            requests:
              memory: "8Gi"
              cpu: "2000m"
            limits:
              memory: "16Gi"
              cpu: "4000m"
          securityContext:
            runAsUser: 1000
