manifests/newswaters/database.yaml
---
# OCEAN: For testing purpose
apiVersion: v1
kind: Service
metadata:
  name: coral-ro-static
spec:
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
      nodePort: 30000
  selector:
    cnpg.io/cluster: coral
    role: replica
  type: NodePort
