manifests/newswaters/vector-database.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vector-coral
  labels:
    app: vector-coral
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vector-coral
  template:
    metadata:
      labels:
        app: vector-coral
    spec:
      containers:
        - name: vector-coral
          image: qdrant/qdrant:v1.6.1
          resources:
            limits:
              memory: "256Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: vector-coral
spec:
  ports:
    - name: http
      protocol: TCP
      port: 6333
      targetPort: 6333
    - name: grpc
      protocol: TCP
      port: 6334
      targetPort: 6334
  selector:
    app: vector-coral
