manifests/newswaters/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beach
  labels:
    app: beach
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: beach
  template:
    metadata:
      labels:
        app: beach
    spec:
      containers:
        - name: beach
          image: ubuntu:22.04
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          stdin: true
          tty: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echolocator
  labels:
    app: echolocator
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: echolocator
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: echolocator
    spec:
      containers:
        # See: https://github.com/metalwhale/newswaters
        - name: echolocator
          image: metalwhaledev/newswaters-echolocator:0.3.1
          imagePullPolicy: Always
          command:
            - echolocator
          resources:
            limits:
              memory: "12Gi"
              cpu: "6000m"
          startupProbe:
            httpGet:
              path: /healthz
              port: 3000
            failureThreshold: 30
            periodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: echolocator
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: echolocator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whistler
  labels:
    app: whistler
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: whistler
  template:
    metadata:
      labels:
        app: whistler
    spec:
      containers:
        # See: https://github.com/metalwhale/newswaters
        - name: whistler
          image: metalwhaledev/newswaters-whistler:0.2.5
          imagePullPolicy: Always
          command:
            - whistler
          resources:
            limits:
              memory: "256Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: whistler
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: whistler
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whistler-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          # See: https://kubernetes.github.io/ingress-nginx/examples/rewrite/#rewrite-target
          - path: /newswaters-whistler(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: whistler
                port:
                  number: 3000
